# lattice

./: .gitignore  Cargo.toml  README.md  lattice-lang-spec.md
.claude/agents/: linguist.md
crates/lattice-bsg/: Cargo.toml  build.rs
crates/lattice-bsg/proto/: lattice_bsg.proto
crates/lattice-bsg/src/: convert.rs  lib.rs
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: docgen.rs  main.rs
crates/lattice-codegen/: Cargo.toml
crates/lattice-codegen/src/: compiler.rs  error.rs  executor.rs  interpreter.rs  ir.rs  lib.rs  optimize.rs
crates/lattice-lsp/: Cargo.toml
crates/lattice-lsp/src/: backend.rs  main.rs
crates/lattice-parser/: Cargo.toml
crates/lattice-parser/src/: ast.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  printer.rs  resolver.rs
crates/lattice-proof/: Cargo.toml
crates/lattice-proof/src/: arithmetic_backend.rs  checker.rs  lib.rs  obligation.rs  smt_backend.rs  status.rs
crates/lattice-repl/: Cargo.toml
crates/lattice-repl/src/: lib.rs  main.rs
crates/lattice-runtime/: Cargo.toml
crates/lattice-runtime/src/: error.rs  graph.rs  lib.rs  node.rs  profiler.rs  scheduler.rs  stream.rs
crates/lattice-synthesizer/: Cargo.toml
crates/lattice-synthesizer/src/: cache.rs  client.rs  engine.rs  error.rs  extractor.rs  lib.rs  optimizer.rs  prompt.rs  types.rs
crates/lattice-synthesizer/tests/: integration.rs
crates/lattice-types/: Cargo.toml
crates/lattice-types/src/: ast.rs  checker.rs  dependent.rs  dependent_checker.rs  environment.rs  lib.rs  normalize.rs  types.rs
examples/: hello.lattice  runnable.lattice  transfer.lattice  user_service.lattice
stdlib/: core.lattice  math.lattice  probability.lattice  stream.lattice
tree-sitter-lattice/: grammar.js  package-lock.json  package.json  tree-sitter.json
