[workspace]
members = [
    "crates/lattice-parser",
    "crates/lattice-types",
    "crates/lattice-bsg",
    "crates/lattice-proof",
    "crates/lattice-runtime",
    "crates/lattice-codegen",
    "crates/lattice-cli",
    "crates/lattice-synthesizer",
    "crates/lattice-lsp",
    "crates/lattice-repl",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
