[package]
name = "lattice-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
lattice-parser = { path = "../lattice-parser" }
lattice-types = { path = "../lattice-types" }
lattice-bsg = { path = "../lattice-bsg" }
lattice-proof = { path = "../lattice-proof" }
lattice-codegen = { path = "../lattice-codegen" }
lattice-runtime = { path = "../lattice-runtime" }
lattice-synthesizer = { path = "../lattice-synthesizer" }
lattice-repl = { path = "../lattice-repl" }
colored = "3"
rustyline = "14"
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
