[package]
name = "lattice-proof"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lattice-parser = { path = "../lattice-parser" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
z3 = { version = "0.19", features = ["static-link-z3"] }
