[package]
name = "lattice-repl"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "lattice-repl"
path = "src/main.rs"

[dependencies]
lattice-parser = { path = "../lattice-parser" }
lattice-types = { path = "../lattice-types" }
lattice-proof = { path = "../lattice-proof" }
lattice-codegen = { path = "../lattice-codegen" }
lattice-runtime = { path = "../lattice-runtime" }
rustyline = "14"
colored = "3"
