[package]
name = "lattice-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lattice-parser = { path = "../lattice-parser" }
tokio = { version = "1", features = ["full"] }
petgraph = "0.7"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
