[package]
name = "lattice-synthesizer"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lattice-parser = { path = "../lattice-parser" }
lattice-proof = { path = "../lattice-proof" }
lattice-runtime = { path = "../lattice-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
